MainMethodTestCases/src/com/example/valid/Main3.java
package com.example.valid;

public class Main3 {
	
	/**
	 * Valid.
	 * 
	 * Varargs form of the main method. New with Java 5.
	 * 
	 * Source: https://rationalpi.wordpress.com/2007/01/29/main-methods-in-java/
	 */
	public static void main(String... args) {
		System.out.println("Main3!");
	}
	
}
