MainMethodTestCases/src/com/example/invalid/Main23.java
package com.example.invalid;

public class Main23 {

	/**
	 * Invalid.
	 * 
	 * Main methods must take a single String array as a parameter
	 */
	public static void main() {

	}

}
